styles/main.css
* {
	box-sizing: border-box;
}

body {
	font-family: "Roboto", Sans-Serif;
}

.nav {
	height: 40px;
	background-color: #EEEEEE;
	position:fixed;
	width: 100%;
	top: 0;
	left: 0;
	right: 0;
	border: 1px solid #DDDDDD;
}

.nav #logo,
.nav ul li {
	display: inline-block;
}

.nav ul a {
	text-decoration: none;
	padding: 0px 5px;
}

#logo {
	padding-left: 5px;
	font-weight: normal;
	position: fixed;
	left: 10px;
	top: 10px;
}

.nav ul  {
	display: inline-block;
	right: 10px;
	bottom: 0px;
	position: absolute;
	padding-top: 5px;
}

.wrapper {
	position:relative;
	padding: 75px 30px;
	margin: auto;
	width: 100%;
}

.search-form {
	padding: 0px;
}

.search-form input {
	border: 1px solid #DDDDDD;
	display: inline-block;
	padding: 0px;
	height: 40px;
}

.search-form input[type="text"] {
	border-radius: 3px;
	font-family: "Roboto", sans-serif;
	font-size: 17px;
	font-weight: 500;
	margin-top: 20px;
	width: 400px;
}

.search-form input[type="image"] {
	border: 1px solid #DDDDDD;
	background-color: white;
	border-radius: 3px;
	margin-bottom: -14px;
}

.results {
	margin-top: 25px;
}

.results ul li {
	display: inline-block;
	border: 1px solid black;
	padding: 5px;
	border-radius: 3px;
}

.list {
	position: relative;
	left: -40px;
	line-height: 200%;
}

.list ul {
	list-style:none;
}

.list ul a, .list li a {
	text-decoration: none;

}

.date, .location {
	color: #999;
}

